--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"><!--icon in head -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png"><!--icon in head -->
   
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" href="custom.css">
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="gran-div">
-    <div class="img"><img alt="QR" src="/images/image-qr-code.png"/></div>
+    <div class="img"><img alt="QR" src="/image-qr-code.png"/></div>
     <div class="text">
     <h2>Improve your front-end skills by building projects</h2>
     <p>Scan de QR code to visit Frontend Mentor and take your coding skils to the next level</p>
