--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="gran-div">
-    <div class="img"><img alt="QR" src="\image-qr-code.png"/></div>
+    <div class="img"><img alt="QR" src="/image-qr-code.png"/></div>
     <div class="text">
     <h2>Improve your front-end skills by building projects</h2>
     <p>Scan de QR code to visit Frontend Mentor and take your coding skils to the next level</p>
